--- a/app/views/songs.erb
+++ b/app/views/songs.erb
@@ -3,10 +3,31 @@
   <head> 
       <title>Goodmorning Annie</title>
       <link rel="stylesheet" type="text/css" href="css/style.css">
+      <style>
+        body  {
+          background-image: url('http://www.mactrast.com/wp-content/uploads/2013/06/osx_hero_2x.jpg');
+          background-size: cover;
+          background-repeat: no-repeat;
+          }
+      </style>
   </head>
 
 
   <body>
-    <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/102706278&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+    <h1>A playlist for (almost) every mood I could think of, Enjoy!</h1>
+    <div class='sc'>
+    <iframe width="625" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/102706278&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+    <iframe width="625" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/92420962&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+    </div>
+    <br><br>
+    <div class='sc'>
+    <iframe width="625" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/51322956&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+    <iframe width="625" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/89795937&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+    </div>
+    <br><br>
+    <div class='sc'>
+    <iframe width="625" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/50629585&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+    
+    </div>
   </body>
 </html>
