--- a/app/views/dinners.erb
+++ b/app/views/dinners.erb
@@ -3,6 +3,13 @@
   <head> 
       <title>Goodmorning Annie</title>
       <link rel="stylesheet" type="text/css" href="css/style.css">
+      <style type="text/css">
+        body  {
+          background-image: url('http://assets.fodors.com/destinations/703763/vineyard-saint-emilion-bordeaux-and-the-wine-country-france_main.jpg');
+          background-size: cover;
+        background-repeat: no-repeat;
+        }
+      </style>
   </head>
 
   <body>
@@ -11,8 +18,12 @@
   <h3><a href="low.erb">Low-Maintenance</a></h3>
   <h3><a href="fancy.erb">Fancy Dinners</a></h3>
   <h3><a href="comfort.erb">Comfort Food</a></h3>
-  <h3><a href="desert.erb">Deserts</a></h3>
+  <h3><a href="dessert.erb">Desserts</a></h3>
   <h3><a href="snacks.erb">Snacks</a></h3>
   
+
+  <footer>
+    <a href="index.erb"><h5>Home></h5></a>
+  </footer>
   </body>
 </html>
