--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,56 @@
 h1 {
   text-align: center;
+  font-family: 'Calligraffitti', cursive;
 }
-body {
-  background-color: #fbfb8f;
+
+
+#bigpic {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .images {
-  box-shadow: 10px 10px 5px #888888;
-  display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
+  overflow: hidden;
   text-align: center;  
+  margin-right: 50px;
+  margin-left: 50px;
 }
+.single {
+  display: inline-block;
+  margin: 5px;
+  border: 5px solid gray;
+}
+
+.centeredtext {
+  text-align: center;
+}
+
+.buttontxt  {
+  color: #FFFFFF;
+}
+
+.sc  {
+  display: inline-block;
+}
+
+footer {
+  display: block;
+}
+
+.ghost-button {
+  display: inline-block;
+  width: 600px;
+  padding: 8px;
+  color: #fff;
+  background-color: rgba(55,55,52,0.5);
+  border: 3px solid #fff;
+  outline: none;
+  text-decoration: none;
+}
+
+.ghost-button:hover,
+.ghost-button:active {
+  background-color: rgba(55,55,52,0.8);
+  color: #000;
+}
+
